[package]
name = "cw-20"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Basic implementation of a CosmWasm-20 compliant token"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { version = "*" }
cw2 = { version = "*" }
cw20 = { version = "*" }
cw-storage-plus = { version = "*" }
cosmwasm-std = { version = "*" }
schemars = { version = "*" }
semver = { version = "*" }
serde = { version = "*" }
thiserror = { version = "*" }

[dev-dependencies]
cw-multi-test = { version = "*" }
cw-utils = { version = "*" }